config gc better